ZFBConnect - FB Login + Friends info fetching working
Changes include
* Kreya's changes to get FB Login and Friends info
* Darshan's changes to get the JSON working to fetch friend's name, id...

--- a/zfbconnect/zfbconnect.html
+++ b/zfbconnect/zfbconnect.html
@@ -2,10 +2,8 @@
 <html>
   <head>
     <title>ZFBConnect</title>
+    <script src="zfbconnect.js"></script>
   </head>
-    <body>
-       <iframe src="https://www.facebook.com/plugins/like.php?href=YOUR_URL"
-        scrolling="no" frameborder="0"
-        style="border:none; width:450px; height:80px"></iframe>
-    </body>
- </html>
+  <body>
+  </body>
+</html>
